--- a/src/ontanimli_ayarlar.ini
+++ b/src/ontanimli_ayarlar.ini
@@ -1,5 +1,5 @@
 [Ayarlar]
-gorunum=Cleanlooks
+gorunum=Fusion
 ulke=186
 sehir=-1
 ilce=-1
@@ -9,6 +9,7 @@ sistem_tepsisinde_baslat=0
 otomatik_guncelle=2
 her_zaman_ustte=0
 besmele_ile_basla=0
+stopify_duraklat=0
 winamp_duraklat=0
 winamp_konum=None
 sabah_ezani_oku=2
@@ -27,4 +28,4 @@ hicri_gun_ilave=2
 ilave_gun_sayisi=0
 
 [Ses_Ayarlari]
-ses_ayari=0.50
+ses_ayari=30
